<resources>
    <string name="app_name">Study Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="social">Social</string>
    <string name="home">Home</string>
    <string name="strozier_library">Strozier Library</string>
    <string name="dirac_science_library">Dirac Science Library</string>
    <string name="hcb_classroom">HCB</string>
    <string name="not_in_study_place">You are not in any of the study places</string>
    <string name="studyStr">Study location:</string>
    <string name="roomStr">Room number:</string>
    <string name="subjectStr">Study subject:</string>
    <string name="yesNoStr">Do you want others to join?</string>
    <string name="yesStr">Yes</string>
    <string name="noStr">No</string>
    <string name="updateStr">UPDATE</string>
    <string name="no_location">No last known location</string>


    <!--<string name="google_maps_key">AIzaSyChP726JrvhiK7EZetBBABEJ7I1L3zzAhM</string>-->

</resources>
